--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -94,7 +94,9 @@
                 android:textColor="@color/white_text_opacity"
                 android:textSize="14sp"
                 android:checked="true"
-                android:buttonTint="@color/white"/>
+                android:button="@null"
+                android:drawablePadding="6dp"
+                android:drawableLeft="@drawable/bg_radio_buttons"/>
             <RadioButton
                 android:id="@+id/radio_phone"
                 android:layout_width="wrap_content"
@@ -102,7 +104,10 @@
                 android:text="@string/via_phone"
                 android:textColor="@color/white_text_opacity"
                 android:textSize="14sp"
-                android:layout_marginStart="40dp"/>
+                android:button="@null"
+                android:drawablePadding="6dp"
+                android:layout_marginStart="40dp"
+                android:drawableLeft="@drawable/bg_radio_buttons"/>
         </RadioGroup>
 
        <LinearLayout
