--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="white_item_opacity">#ddffffff</color>
     <color name="hint_color">#32ffffff</color>
     <color name="orange_textcolor">#F4694A</color>
+    <color name="green">#B8E986</color>
 </resources>
