--- a/app/src/main/res/layout/fragment_follow_limited_user.xml
+++ b/app/src/main/res/layout/fragment_follow_limited_user.xml
@@ -1,14 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
+    android:focusable="true"
+    android:background="@drawable/ic_bg_screen"
     tools:context=".fragment.FollowLimitedUserFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+<de.hdodenhof.circleimageview.CircleImageView
+    android:id="@+id/image_profile_icon"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:src="@drawable/ic_andy_rubin"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    android:layout_marginTop="70dp"/>
     <TextView
+        android:id="@+id/text_about_limited_user"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:text="Please enter the 7 digit code that you \nreceived to start following your new player."
+        android:textColor="@color/white_text_opacity"
+        android:textSize="@dimen/paragraph_size"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image_profile_icon"/>
+    <EditText
+        android:id="@+id/edit_text_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_edittext_code"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:padding="14dp"
+        android:layout_marginTop="40dp"
+        android:hint="Enter code here"
+        android:textSize="16sp"
+        android:textColorHint="@color/light_white"
+        android:gravity="center"
+        android:textColor="@color/light_white"
+        app:layout_constraintTop_toBottomOf="@id/text_about_limited_user"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/button_follow_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Follow"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:padding="16dp"
+        android:gravity="center"
+        android:background="@drawable/bg_button"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:textSize="@dimen/button_textSize"
+        android:layout_marginTop="60dp"
+        app:layout_constraintTop_toBottomOf="@id/edit_text_code"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+</android.support.constraint.ConstraintLayout>
