--- a/app/src/main/res/layout/fragment_profile_user.xml
+++ b/app/src/main/res/layout/fragment_profile_user.xml
@@ -23,7 +23,7 @@
         android:id="@+id/text_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Marcella Gage"
+        android:text="@string/marcella_gage"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:gravity="center"
@@ -35,7 +35,7 @@
         android:id="@+id/text_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Marcellagage@gmail.com"
+        android:text="@string/email_user"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:gravity="center"
@@ -59,7 +59,7 @@
         android:id="@+id/text_phoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="(+91)904 121 2323"
+        android:text="@string/user_number"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:gravity="center"
@@ -73,7 +73,7 @@
         android:layout_width="170dp"
         android:layout_height="40dp"
         android:background="@drawable/bg_button"
-        android:text="Edit Profile"
+        android:text="@string/edit_profile"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:layout_marginTop="20dp"
@@ -109,7 +109,7 @@
         android:id="@+id/text_following"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="FOLLOWINGS"
+        android:text="@string/followings"
         android:textSize="12sp"
         android:textColor="@color/white"
         android:gravity="center"
@@ -142,7 +142,7 @@
         android:id="@+id/text_myFans"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="MY FANS"
+        android:text="@string/my_fans"
         android:textSize="12sp"
         android:textColor="@color/white"
         android:gravity="center"
@@ -175,7 +175,7 @@
         android:id="@+id/text_limitedUser"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="LIMITED USER"
+        android:text="@string/limited_user"
         android:textSize="12sp"
         android:textColor="@color/white"
         android:gravity="center"
@@ -196,7 +196,7 @@
         android:id="@+id/text_changePassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Change Password"
+        android:text="@string/change_password"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:padding="18dp"
@@ -216,7 +216,7 @@
         android:id="@+id/text_accountPrivacy"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Account Privacy"
+        android:text="@string/account_privacy"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:padding="18dp"
