--- a/app/src/main/res/layout/activity_create_limited_user.xml
+++ b/app/src/main/res/layout/activity_create_limited_user.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="110dp"
-                android:text="Create Limited User"
+                android:text="@string/create_limited_user"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textSize="@dimen/toolbar_title_size"
@@ -78,7 +78,7 @@
         android:id="@+id/button_generate_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Generate Code"
+        android:text="@string/generate_code"
         android:textAllCaps="false"
         android:textStyle="bold"
         android:textColor="@color/white"
