--- a/app/src/main/res/layout/fragment_follow_limited_user.xml
+++ b/app/src/main/res/layout/fragment_follow_limited_user.xml
@@ -39,8 +39,8 @@
         android:layout_marginEnd="30dp"
         android:padding="14dp"
         android:layout_marginTop="40dp"
-        android:hint="Enter code here"
-        android:textSize="16sp"
+        android:hint="@string/enter_code_here"
+        android:textSize="14sp"
         android:textColorHint="@color/light_white"
         android:gravity="center"
         android:textColor="@color/light_white"
@@ -51,7 +51,7 @@
         android:id="@+id/button_follow_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Follow"
+        android:text="@string/follow"
         android:textAllCaps="false"
         android:textStyle="bold"
         android:textColor="@color/white"
