--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,10 +42,10 @@ android:background="@color/black">
         android:id="@+id/text_resumeGame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Click here to resume your game"
+        android:text="@string/resume_your_game"
         android:textSize="14sp"
         android:textColor="@color/white"
-        android:gravity="right"
+        android:gravity="end"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
