--- a/app/src/main/res/layout/activity_receive_otp.xml
+++ b/app/src/main/res/layout/activity_receive_otp.xml
@@ -88,6 +88,7 @@
             android:cursorVisible="false"
             android:textSize="25sp"
             app:itemSpacing="22dp"
+            android:enabled="false"
             android:layout_marginTop="12dp"
             android:textColorHint="@color/orange"
             android:textColor="@drawable/bg_pinview_textcolor"
