--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -78,6 +78,7 @@
             android:textColorHint="@color/hint_color"
             android:padding="16dp"
             android:gravity="center"
+            android:textSize="14sp"
             android:inputType="textPersonName"
             android:background="@drawable/bg_edittext"
             app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +96,7 @@
             android:textColorHint="@color/hint_color"
             android:padding="16dp"
             android:gravity="center"
+            android:textSize="14sp"
             android:inputType="textEmailAddress"
             android:background="@drawable/bg_edittext"
             app:layout_constraintStart_toStartOf="parent"
@@ -113,6 +115,7 @@
             android:padding="16dp"
             android:gravity="center"
             android:inputType="textPassword"
+            android:textSize="14sp"
             android:background="@drawable/bg_edittext"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -130,6 +133,7 @@
             android:padding="16dp"
             android:gravity="center"
             android:inputType="phone"
+            android:textSize="14sp"
             android:background="@drawable/bg_edittext"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
