--- a/app/src/main/res/layout/activity_success_otp.xml
+++ b/app/src/main/res/layout/activity_success_otp.xml
@@ -89,6 +89,7 @@
             android:cursorVisible="false"
             android:textSize="25sp"
             app:itemSpacing="6dp"
+            android:enabled="false"
             android:layout_marginTop="12dp"
             android:textColorHint="@color/orange"
             android:textColor="@drawable/bg_pinview_textcolor"
