--- a/app/src/main/res/layout/fragment_start_new_game.xml
+++ b/app/src/main/res/layout/fragment_start_new_game.xml
@@ -1,9 +1,231 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.StartNewGameFragment">
+    android:id="@+id/scrollviewStartGame"
+    android:background="@drawable/ic_bg_screen">
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp">
 
+<TextView
+    android:id="@+id/text_title"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:text="Start a new game as the scorekeeper"
+    android:textSize="18sp"
+    android:textColor="@color/white"
+    android:gravity="center"
+    android:layout_marginTop="40dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"/>
+    <Spinner
+        android:id="@+id/spinner_players_name"
+        android:layout_width="0dp"
+        android:layout_height="42dp"
+        android:entries="@array/items"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginTop="16dp"
+        android:paddingStart="8dp"
+        android:visibility="invisible"
+        android:dropDownVerticalOffset="45dp"
+        android:background="@drawable/bg_edittext_code"
+        app:layout_constraintStart_toStartOf="@id/text_title"
+        app:layout_constraintEnd_toEndOf="@id/text_title"
+        app:layout_constraintTop_toBottomOf="@id/text_title">
+    </Spinner>
+    <TextView
+        android:id="@+id/text_select_players"
+        android:layout_width="0dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginTop="16dp"
+        android:paddingStart="16dp"
+        android:text="Select Players"
+        android:textSize="14sp"
+        android:textColor="@color/white"
+        android:gravity="center_vertical"
+        android:dropDownVerticalOffset="45dp"
+        android:background="@drawable/bg_edittext_code"
+        app:layout_constraintStart_toStartOf="@id/text_title"
+        app:layout_constraintEnd_toEndOf="@id/text_title"
+        app:layout_constraintTop_toBottomOf="@id/text_title"/>
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/iamge_arrow"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_triangle"
+        app:layout_constraintBottom_toBottomOf="@+id/text_select_players"
+        app:layout_constraintEnd_toEndOf="@+id/text_select_players"
+        app:layout_constraintTop_toTopOf="@+id/text_select_players" />
+    <TextView
+        android:id="@+id/text_addPlayers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/click_here_to_add"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:gravity="center"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/text_select_players"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:id="@+id/text_CreateLimtedUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Create Limited User"
+        android:textColor="@color/green"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_addPlayers"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+        android:id="@+id/text_addLimitedUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/add_a_limited_user"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/text_CreateLimtedUser"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <LinearLayout
+        android:id="@+id/linearView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="#FAFAFA"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_addLimitedUser"
+        app:layout_constraintEnd_toEndOf="@id/text_addLimitedUser">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Deepak"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/yellow"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Code: 56343674"
+            android:layout_marginStart="10dp"
+            android:textSize="14sp"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/white_background_opacity"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="4dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Davin"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/yellow"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Code:46387463"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="14sp"/>
+    </LinearLayout>
+    <Spinner
+        android:id="@+id/spinner_gameName"
+        android:layout_width="0dp"
+        android:layout_height="42dp"
+        android:entries="@array/gameName"
+        android:layout_marginTop="30dp"
+        android:paddingStart="8dp"
+        android:visibility="invisible"
+        android:dropDownVerticalOffset="50dp"
+        android:background="@drawable/bg_edittext_code"
+        app:layout_constraintStart_toStartOf="@id/linearView"
+        app:layout_constraintEnd_toEndOf="@id/linearView"
+        app:layout_constraintTop_toBottomOf="@id/linearView">
+    </Spinner>
+    <TextView
+        android:id="@+id/text_select_games"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginTop="35dp"
+        android:paddingStart="16dp"
+        android:text="Select Games"
+        android:textSize="14sp"
+        android:textColor="@color/white"
+        android:gravity="center_vertical"
+        android:dropDownVerticalOffset="40dp"
+        android:background="@drawable/bg_edittext_code"
+        app:layout_constraintStart_toStartOf="@id/linearView"
+        app:layout_constraintEnd_toEndOf="@id/linearView"
+        app:layout_constraintTop_toBottomOf="@id/linearView"/>
+
+    <ImageView
+        android:id="@+id/image_arrow"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_triangle"
+        app:layout_constraintBottom_toBottomOf="@+id/text_select_games"
+        app:layout_constraintEnd_toEndOf="@+id/text_select_games"
+        app:layout_constraintTop_toTopOf="@+id/text_select_games" />
+    <Button
+        android:id="@+id/button_startGame"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Start Game"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:padding="16dp"
+        android:gravity="center"
+        android:background="@drawable/bg_button"
+        android:textSize="@dimen/button_textSize"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@id/text_select_games"
+        app:layout_constraintStart_toStartOf="@id/text_select_games"
+        app:layout_constraintEnd_toEndOf="@id/text_select_games"/>
+    <Button
+        android:id="@+id/button_submit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Save &amp; Start Later"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:padding="16dp"
+        android:gravity="center"
+        android:background="@drawable/bg_button_start_later"
+        android:textSize="@dimen/button_textSize"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/button_startGame"
+        app:layout_constraintStart_toStartOf="@id/button_startGame"
+        app:layout_constraintEnd_toEndOf="@id/button_startGame"/>
+</android.support.constraint.ConstraintLayout>
+</ScrollView>
