--- a/app/src/main/res/drawable/bg_button_start_later.xml
+++ b/app/src/main/res/drawable/bg_button_start_later.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/black" />
+    <solid android:color="#FAFAFA" />
     <corners android:radius="60dp" />
     <stroke android:color="@color/white" android:width="1dp"/>
 </shape>
