--- a/app/src/main/res/layout/activity_create_limited_user.xml
+++ b/app/src/main/res/layout/activity_create_limited_user.xml
@@ -61,10 +61,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/full_name"
+        android:gravity="center"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:padding="12dp"
-        android:paddingStart="18dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="35dp"
         android:layout_marginStart="35dp"
