--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -142,7 +142,7 @@
         android:id="@+id/edit_text_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_loginEmail"
+        android:hint="Enter your email here"
         android:textColorHint="@color/white_item_opacity"
         android:textSize="16sp"
         android:layout_marginStart="31dp"
