--- a/app/src/main/res/layout/activity_success_otp.xml
+++ b/app/src/main/res/layout/activity_success_otp.xml
@@ -78,20 +78,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
         <com.chaos.view.PinView
-            android:id="@+id/text_pin"
+            android:id="@+id/text_pin_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/PinWidget.PinView"
             android:inputType="phone"
             android:layout_marginStart="18dp"
             android:padding="20dp"
-            android:hint="@string/otp_2600"
             android:cursorVisible="false"
             android:textSize="25sp"
             app:itemSpacing="6dp"
             android:enabled="false"
             android:layout_marginTop="12dp"
-            android:textColorHint="@color/orange"
             android:textColor="@drawable/bg_pinview_textcolor"
             app:itemCount="4"
             app:viewType="line"
@@ -104,10 +102,10 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:background="@drawable/ic_verify"
-            app:layout_constraintBottom_toBottomOf="@id/text_pin"
+            app:layout_constraintBottom_toBottomOf="@id/text_pin_code"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/text_pin"
-            app:layout_constraintTop_toTopOf="@id/text_pin" />
+            app:layout_constraintStart_toEndOf="@+id/text_pin_code"
+            app:layout_constraintTop_toTopOf="@id/text_pin_code" />
         <TextView
             android:id="@+id/text_new_password"
             android:layout_width="match_parent"
@@ -118,7 +116,7 @@
             android:layout_marginStart="38dp"
             android:layout_marginTop="40dp"
             android:textColor="@color/white_text_opacity"
-            app:layout_constraintTop_toBottomOf="@id/text_pin"
+            app:layout_constraintTop_toBottomOf="@id/text_pin_code"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
         <EditText
