--- a/app/src/main/res/layout/fragment_start_new_game.xml
+++ b/app/src/main/res/layout/fragment_start_new_game.xml
@@ -46,11 +46,10 @@
         android:layout_marginStart="45dp"
         android:layout_marginEnd="45dp"
         android:layout_marginTop="16dp"
-        android:paddingStart="16dp"
         android:text="Select Players"
         android:textSize="14sp"
         android:textColor="@color/white"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:dropDownVerticalOffset="45dp"
         android:background="@drawable/bg_edittext_code"
         app:layout_constraintStart_toStartOf="@id/text_title"
@@ -173,11 +172,10 @@
         android:layout_marginStart="45dp"
         android:layout_marginEnd="45dp"
         android:layout_marginTop="35dp"
-        android:paddingStart="16dp"
         android:text="Select Games"
         android:textSize="14sp"
         android:textColor="@color/white"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:dropDownVerticalOffset="40dp"
         android:background="@drawable/bg_edittext_code"
         app:layout_constraintStart_toStartOf="@id/linearView"
@@ -206,8 +204,6 @@
         android:background="@drawable/bg_button"
         android:textSize="@dimen/button_textSize"
         android:layout_marginTop="35dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         app:layout_constraintTop_toBottomOf="@id/text_select_games"
         app:layout_constraintStart_toStartOf="@id/text_select_games"
         app:layout_constraintEnd_toEndOf="@id/text_select_games"/>
@@ -218,7 +214,7 @@
         android:text="Save &amp; Start Later"
         android:textAllCaps="false"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/orange_textcolor"
         android:padding="16dp"
         android:gravity="center"
         android:background="@drawable/bg_button_start_later"
