--- a/app/src/main/res/layout/item_resumed_games.xml
+++ b/app/src/main/res/layout/item_resumed_games.xml
@@ -60,6 +60,15 @@
                 android:layout_marginStart="12dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
+            <ImageView
+                android:id="@+id/image_share"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/ic_launcher"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
             <TextView
                 android:id="@+id/text_players"
                 android:layout_width="wrap_content"
@@ -121,7 +130,8 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="@id/text_players"
+                app:layout_constraintBottom_toBottomOf="@id/text_players"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/circular_image_userIcon"
