--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -105,7 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/full_name_here"
-        android:textColorHint="@color/white_item_opacity"
+        android:textColorHint="@color/hint_color"
         android:textSize="16sp"
         android:layout_marginStart="31dp"
         android:padding="8dp"
@@ -143,7 +143,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter your email here"
-        android:textColorHint="@color/white_item_opacity"
+        android:textColorHint="@color/hint_color"
         android:textSize="16sp"
         android:layout_marginStart="31dp"
         android:padding="8dp"
@@ -182,7 +182,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/phone_number_here"
-        android:textColorHint="@color/white_item_opacity"
+        android:textColorHint="@color/hint_color"
         android:textSize="16sp"
         android:layout_marginStart="31dp"
         android:padding="8dp"
