--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/constraintChangePassword"
     android:background="@color/white">
+
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusableInTouchMode="true"
+        android:focusable="true">
     <FrameLayout
         android:id="@+id/frame_header"
         android:layout_width="0dp"
@@ -67,23 +74,28 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.6"/>
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.7"/>
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="0dp"
-        android:layout_height="360dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="100dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="8dp"
         app:cardBackgroundColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/frame_header"
+        app:layout_constraintTop_toTopOf="@id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/guideline">
+        app:layout_constraintBottom_toBottomOf="@id/guideline2">
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="360dp">
+            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/text_old_password"
                 android:layout_width="match_parent"
@@ -96,24 +108,26 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
-            <EditText
-                android:id="@+id/edit_text_old_password"
-                android:layout_width="match_parent"
+            <com.chaos.view.PinView
+                android:id="@+id/pin_old_password"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:paddingBottom="2dp"
-                android:letterSpacing="0.40"
-                android:cursorVisible="true"
-                android:textCursorDrawable="@null"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="105dp"
+                style="@style/PinWidget.PinView"
                 android:inputType="textPassword"
-                android:background="@drawable/bg_change_password_dotted"
+                android:padding="14dp"
+                android:cursorVisible="false"
+                app:itemSpacing="8dp"
+                android:textColor="@drawable/bg_change_password_text_color"
+                app:itemCount="10"
+                app:viewType="line"
+                app:itemWidth="16dp"
+                android:textSize="8sp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="8dp"
+                app:lineColor="@drawable/bg_change_password_line_color"
+                app:layout_constraintEnd_toStartOf="@id/text_show_password"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_old_password"/>
-
 
             <TextView
                 android:id="@+id/text_show_password"
@@ -127,9 +141,9 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="8dp"
                 android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="@id/edit_text_old_password"
+                app:layout_constraintBottom_toBottomOf="@id/pin_old_password"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/edit_text_old_password"/>
+                app:layout_constraintTop_toTopOf="@id/pin_old_password"/>
             <TextView
                 android:id="@+id/text_hide_password"
                 android:layout_width="0dp"
@@ -142,9 +156,9 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="8dp"
                 android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="@id/edit_text_old_password"
+                app:layout_constraintBottom_toBottomOf="@id/pin_old_password"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/edit_text_old_password"/>
+                app:layout_constraintTop_toTopOf="@id/pin_old_password"/>
             <TextView
                 android:id="@+id/text_forgot_old_password"
                 android:layout_width="match_parent"
@@ -155,7 +169,7 @@
                 android:layout_marginTop="22dp"
                 android:textSize="12sp"
                 android:padding="4dp"
-                app:layout_constraintTop_toBottomOf="@id/edit_text_old_password"
+                app:layout_constraintTop_toBottomOf="@id/pin_old_password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -171,21 +185,24 @@
                 app:layout_constraintTop_toBottomOf="@id/text_forgot_old_password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
-            <EditText
-                android:id="@+id/edit_text_new_password"
-                android:layout_width="match_parent"
+            <com.chaos.view.PinView
+                android:id="@+id/pin_new_password"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:paddingBottom="2dp"
-                android:letterSpacing="0.34"
-                android:cursorVisible="true"
-                android:textCursorDrawable="@null"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="105dp"
+                style="@style/PinWidget.PinView"
                 android:inputType="textPassword"
-                android:background="@drawable/bg_change_password_dotted"
+                android:padding="14dp"
+                android:cursorVisible="false"
+                app:itemSpacing="8dp"
+                android:textColor="@drawable/bg_change_password_text_color"
+                app:itemCount="10"
+                app:viewType="line"
+                app:itemWidth="16dp"
+                android:textSize="8sp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="8dp"
+                app:lineColor="@drawable/bg_change_password_line_color"
+                app:layout_constraintEnd_toStartOf="@id/text_show_password_second"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_new_password"/>
 
@@ -202,9 +219,9 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="8dp"
                 android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="@id/edit_text_new_password"
+                app:layout_constraintBottom_toBottomOf="@id/pin_new_password"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/edit_text_new_password"/>
+                app:layout_constraintTop_toTopOf="@id/pin_new_password"/>
             <TextView
                 android:id="@+id/text_hide_password_second"
                 android:layout_width="0dp"
@@ -217,25 +234,29 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="8dp"
                 android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="@id/edit_text_new_password"
+                app:layout_constraintBottom_toBottomOf="@id/pin_new_password"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/edit_text_new_password"/>
+                app:layout_constraintTop_toTopOf="@id/pin_new_password"/>
+
             <Button
                 android:id="@+id/button_changePassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_button"
-                android:text="Change"
-                android:textSize="@dimen/button_textSize"
-                android:textColor="@color/white"
-                android:textAllCaps="false"
-                android:layout_marginTop="30dp"
-                android:layout_marginStart="25dp"
+                android:layout_marginBottom="16dp"
                 android:layout_marginEnd="25dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/bg_button"
                 android:padding="16dp"
-                app:layout_constraintTop_toBottomOf="@id/edit_text_new_password"
+                android:text="Change"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="@dimen/button_textSize"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/pin_new_password" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
