--- a/app/src/main/res/layout/activity_create_limited_user.xml
+++ b/app/src/main/res/layout/activity_create_limited_user.xml
@@ -7,40 +7,43 @@
     android:layout_height="match_parent"
     android:background="@drawable/ic_bg_screen"
     tools:context=".activity.CreateLimitedUserActivity">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_create_limitedUser"
+    <FrameLayout
+        android:id="@+id/frame_header"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:paddingBottom="12dp"
-        android:background="@drawable/bg_toolbar"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/bg_toolbar">
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:id="@+id/image_back"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/ic_launcher_background"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:id="@+id/image_close"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/ic_close"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/text_title"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="110dp"
-                android:text="@string/create_limited_user"
-                android:textStyle="bold"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="18dp"
+                android:text="Create Limited User"
                 android:textColor="@color/white"
                 android:textSize="@dimen/toolbar_title_size"
-                android:padding="4dp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/image_close"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.Toolbar>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/text_fullname_limited_user"
@@ -55,7 +58,7 @@
         android:textColor="@color/white_text_opacity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_create_limitedUser"/>
+        app:layout_constraintTop_toBottomOf="@+id/frame_header"/>
     <EditText
         android:id="@+id/edit_text_fullname"
         android:layout_width="0dp"
@@ -63,7 +66,7 @@
         android:hint="@string/full_name"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:padding="12dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="35dp"
