--- a/app/src/main/res/layout/fragment_profile_user.xml
+++ b/app/src/main/res/layout/fragment_profile_user.xml
@@ -233,10 +233,16 @@
 
     <ToggleButton
         android:id="@+id/toggle_privacy"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:checked="false"
+        android:checked="true"
+        android:text=""
+        android:textOff=""
+        android:textOn=""
+        android:background="@drawable/ic_toogle_on"
+        app:layout_constraintBottom_toBottomOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view3" />
 </android.support.constraint.ConstraintLayout>
