--- a/app/src/main/res/drawable/bg_edittext_searching.xml
+++ b/app/src/main/res/drawable/bg_edittext_searching.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="@color/light_grey"/>
+    <solid android:color="#FFEAE8E8"/>
     <stroke android:color="@color/grey" android:width="1dp"/>
     <corners
         android:bottomRightRadius="12dp"
