--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -109,27 +109,22 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
-            <com.chaos.view.PinView
-                android:id="@+id/pin_old_password"
-                android:layout_width="0dp"
+            <EditText
+                android:id="@+id/edit_text_old_password"
+                android:layout_width="210dp"
                 android:layout_height="wrap_content"
-                style="@style/PinWidget.PinView"
                 android:inputType="textPassword"
-                android:padding="14dp"
-                android:cursorVisible="false"
-                app:itemSpacing="8dp"
-                android:textColor="@drawable/bg_change_password_text_color"
-                app:itemCount="10"
-                app:viewType="line"
-                app:itemWidth="16dp"
-                android:textSize="8sp"
+                android:paddingBottom="14dp"
+                android:paddingTop="14dp"
+                android:cursorVisible="true"
+                android:textColor="@color/black"
+                android:textSize="18sp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginStart="8dp"
-                app:lineColor="@drawable/bg_change_password_line_color"
-                app:layout_constraintEnd_toStartOf="@id/text_show_password"
+                android:layout_marginStart="23dp"
+                android:backgroundTint="@color/light_grey"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_old_password">
-            </com.chaos.view.PinView>
+            </EditText>
 
             <TextView
                 android:id="@+id/text_show_password"
@@ -143,9 +138,9 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="8dp"
                 android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="@id/pin_old_password"
+                app:layout_constraintBottom_toBottomOf="@id/edit_text_old_password"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/pin_old_password"/>
+                app:layout_constraintTop_toTopOf="@id/edit_text_old_password"/>
             <TextView
                 android:id="@+id/text_hide_password"
                 android:layout_width="0dp"
@@ -158,9 +153,9 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="8dp"
                 android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="@id/pin_old_password"
+                app:layout_constraintBottom_toBottomOf="@id/edit_text_old_password"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/pin_old_password"/>
+                app:layout_constraintTop_toTopOf="@id/edit_text_old_password"/>
             <TextView
                 android:id="@+id/text_forgot_old_password"
                 android:layout_width="match_parent"
@@ -171,7 +166,7 @@
                 android:layout_marginTop="22dp"
                 android:textSize="12sp"
                 android:padding="4dp"
-                app:layout_constraintTop_toBottomOf="@id/pin_old_password"
+                app:layout_constraintTop_toBottomOf="@id/edit_text_old_password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -187,24 +182,19 @@
                 app:layout_constraintTop_toBottomOf="@id/text_forgot_old_password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
-            <com.chaos.view.PinView
-                android:id="@+id/pin_new_password"
-                android:layout_width="0dp"
+            <EditText
+                android:id="@+id/edit_text_password"
+                android:layout_width="210dp"
                 android:layout_height="wrap_content"
-                style="@style/PinWidget.PinView"
                 android:inputType="textPassword"
-                android:padding="14dp"
-                android:cursorVisible="false"
-                app:itemSpacing="8dp"
-                android:textColor="@drawable/bg_change_password_text_color"
-                app:itemCount="10"
-                app:viewType="line"
-                app:itemWidth="16dp"
-                android:textSize="8sp"
+                android:paddingTop="14dp"
+                android:paddingBottom="14dp"
+                android:cursorVisible="true"
+                android:textColor="@color/black_opacity"
+                android:textSize="18sp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginStart="8dp"
-                app:lineColor="@drawable/bg_change_password_line_color"
-                app:layout_constraintEnd_toStartOf="@id/text_show_password_second"
+                android:layout_marginStart="23dp"
+                android:backgroundTint="@color/light_grey"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_new_password"/>
 
@@ -221,9 +211,9 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="8dp"
                 android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="@id/pin_new_password"
+                app:layout_constraintBottom_toBottomOf="@id/edit_text_password"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/pin_new_password"/>
+                app:layout_constraintTop_toTopOf="@id/edit_text_password"/>
             <TextView
                 android:id="@+id/text_hide_password_second"
                 android:layout_width="0dp"
@@ -236,9 +226,9 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="8dp"
                 android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="@id/pin_new_password"
+                app:layout_constraintBottom_toBottomOf="@id/edit_text_password"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/pin_new_password"/>
+                app:layout_constraintTop_toTopOf="@id/edit_text_password"/>
 
             <Button
                 android:id="@+id/button_changePassword"
@@ -257,7 +247,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/pin_new_password" />
+                app:layout_constraintTop_toBottomOf="@id/edit_text_password" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
