--- a/app/src/main/res/layout/activity_my_fans.xml
+++ b/app/src/main/res/layout/activity_my_fans.xml
@@ -51,8 +51,8 @@
         android:hint="Search"
         android:layout_margin="20dp"
         android:padding="10dp"
-        android:textColorHint="@color/dark_grey"
-        android:textColor="@color/dark_grey"
+        android:textColorHint="@color/grey"
+        android:textColor="@color/black_opacity"
         android:textSize="14sp"
         android:textCursorDrawable="@null"
         android:background="@drawable/bg_edittext_searching"
