--- a/app/src/main/res/layout/activity_success_otp.xml
+++ b/app/src/main/res/layout/activity_success_otp.xml
@@ -115,6 +115,21 @@
             android:textStyle="bold"
             android:layout_marginStart="38dp"
             android:layout_marginTop="40dp"
+            android:visibility="visible"
+            android:textColor="@color/white_text_opacity"
+            app:layout_constraintTop_toBottomOf="@id/text_pin_code"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+        <TextView
+            android:id="@+id/text_confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Confirm Password"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_marginStart="38dp"
+            android:layout_marginTop="40dp"
+            android:visibility="invisible"
             android:textColor="@color/white_text_opacity"
             app:layout_constraintTop_toBottomOf="@id/text_pin_code"
             app:layout_constraintEnd_toEndOf="parent"
@@ -124,18 +139,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textSize="24sp"
-            android:textColor="@color/white"
-            android:paddingBottom="2dp"
-            android:letterSpacing="0.34"
+            android:textSize="18sp"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:textColor="@color/white_text_opacity"
             android:cursorVisible="true"
             android:textCursorDrawable="@null"
             android:layout_marginStart="35dp"
             android:layout_marginEnd="100dp"
             android:inputType="textPassword"
-            android:background="@drawable/bg_edittext_dotted"
+            android:visibility="visible"
+            android:backgroundTint="@color/white_text_opacity"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_new_password"/>
+        <EditText
+            android:id="@+id/edit_text_confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textSize="18sp"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:textColor="@color/white_text_opacity"
+            android:cursorVisible="true"
+            android:textCursorDrawable="@null"
+            android:layout_marginStart="35dp"
+            android:layout_marginEnd="100dp"
+            android:inputType="textPassword"
+            android:visibility="invisible"
+            android:backgroundTint="@color/white_text_opacity"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_confirm_password"/>
 
 
         <TextView
