--- a/app/src/main/res/layout/fragment_follow_limited_user.xml
+++ b/app/src/main/res/layout/fragment_follow_limited_user.xml
@@ -13,7 +13,7 @@
     android:id="@+id/image_profile_icon"
     android:layout_width="100dp"
     android:layout_height="100dp"
-    android:src="@drawable/ic_andy_rubin"
+    android:src="@drawable/ic_limited_user"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
