--- a/app/src/main/res/layout/item_players_list.xml
+++ b/app/src/main/res/layout/item_players_list.xml
@@ -53,11 +53,11 @@
 
             <ImageView
                 android:id="@+id/image_share"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginEnd="6dp"
                 android:layout_marginTop="8dp"
-                android:src="@drawable/ic_launcher"
+                android:src="@drawable/ic_share_icon"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/text_gameProgress"/>
