--- a/app/src/main/res/layout/item_resumed_games.xml
+++ b/app/src/main/res/layout/item_resumed_games.xml
@@ -62,11 +62,11 @@
                 app:layout_constraintTop_toTopOf="parent"/>
             <ImageView
                 android:id="@+id/image_share"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginEnd="6dp"
                 android:layout_marginTop="8dp"
-                android:src="@drawable/ic_launcher"
+                android:src="@drawable/ic_share_icon"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
             <TextView
